# qaguru_17_DKudriavtseva

./: README.md  pyproject.toml
