[tool.poetry]
name = "qaguru-17-dkudriavtseva"
version = "0.1.0"
description = ""
authors = ["Daria Kudriavtseva <situation96@mail.ru>"]
readme = "README.md"
packages = [{include = "qaguru_17_dkudriavtseva"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc2"
pytest = "7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
